--- a/eks/apps/httpbin/httpbin-ingress.yaml
+++ b/eks/apps/httpbin/httpbin-ingress.yaml
@@ -3,7 +3,8 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: alb
-    alb.ingress.kubernetes.io/subnets: subnet-084c5895eb1d52dd7,subnet-02071d8a55e08f4bf,subnet-0020f3fbe59736d60
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    # alb.ingress.kubernetes.io/subnets: subnet-084c5895eb1d52dd7,subnet-02071d8a55e08f4bf,subnet-0020f3fbe59736d60
   name: httpbin-ingress
   namespace: default
 spec:
