--- a/eks/apps/httpbin/httpbin-deployment.yaml
+++ b/eks/apps/httpbin/httpbin-deployment.yaml
@@ -2,13 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: httpbin-service
-  namespace: default
-  labels:
-    app: httpbin    
+  namespace: default 
 spec:
   ports:
   - port: 80
+    targetPort: 80
     name: http
+    protocol: TCP
+  type: NodePort
   selector:
     app: httpbin
 
