--- a/eks/kube2iam/test-pod.yaml
+++ b/eks/kube2iam/test-pod.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: aws-cli
+  namespace: default
   labels:
     name: aws-cli
   annotations:
@@ -13,5 +14,5 @@ spec:
       - "/home/aws/aws/env/bin/aws"
       - "s3"
       - "ls"
-      - "some-bucket"
+      - "xz-webapp"
     name: aws-cli
